--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ psycopg2==2.9
 #   Paquete de Python para proyectos Django que facilita el uso de variables de entorno
 django-environ==0.12.0
 
+#   Biblioteca de procesamiento de imagenes en Python
+pillow==11.0.0
+
 #   Servidor web ASGI rápido y ligero para aplicaciones Python
 uvicorn==0.32.0
 
