--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   backend:
     container_name: django
@@ -54,6 +53,19 @@ services:
     depends_on:
       - django_redis
       - django_db
+
+  # Servicio Celery - Beat
+  celery_beat:
+    container_name: blog_celery_beat
+    build: .
+    command: celery -A core beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    volumes:
+      - .:/app
+    ports:
+      - 8083:8083
+    depends_on:
+     - django_redis
+     - django_db
 
 volumes:
   pg_data:
